<resources>
    <string name="app_name">Geld Manager</string>
    <string name="Uitgave">Uitgaven</string>
    <string name="Inkomsten">Inkomsten</string>
    <string name="Bedrag">Bedrag: </string>
    <string name="Datum">Datum: </string>
    <string name="Categorie">Categorie: </string>
    <string name="Herhaald">Herhaald</string>
    <string name="Dag">Dag</string>
    <string name="Elke">Elke:</string>
    <string name="Week">Week</string>
    <string name="Maand">Maand</string>
    <string name="Opdelen">Bedrag opdelen in meer dan 1 categorie</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="lijst">Lijst</string>
    <string name="invoer">Nieuwe Invoer</string>
    <string name="cat_man">Categorie manager</string>
    <string name="per_mut">Periodieke mutaties</string>
    <string name="maand_bew">Maand bewerken</string>
    <string name="maand_ex">Maand exporteren</string>
    <string name="submitbtn">Submit</string>
</resources>
