<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rnd.project.MainActivity">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        android:onClick="gotoHome" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/settings"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_above="@+id/categorieButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/categorieButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/cat_man"
        android:layout_below="@+id/homeButton"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/mutatieButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/per_mut"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/categorieButton"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/bewerkenButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/maand_bew"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/mutatieButton"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/exportButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/maand_ex"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bewerkenButton"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

</RelativeLayout>