<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rnd.project.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Uitgave"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_alignBottom="@+id/homeButton"
        android:layout_toEndOf="@+id/homeButton"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        android:onClick="gotoHome" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/settings"
        android:onClick="gotoSettings" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray" />

</RelativeLayout>