<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context="rnd.project.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Inkomsten"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_alignBottom="@+id/settingsButton"
        android:layout_toStartOf="@+id/settingsButton"
        android:layout_marginEnd="22dp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoHome"
        android:text="@string/Home" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:onClick="gotoSettings"
        android:text="@string/settings" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray" />
    <!--    https://www.youtube.com/watch?v=vPnqfhQPZe0
            Dit is een tutorial over hoe je dynamisch
            een listview kan vullen -->


</RelativeLayout>